--- a/client/Dockerfile 
+++ b/client/Dockerfile 
@@ -18,7 +18,7 @@ USER reactjs
 EXPOSE 3000
 
 ENV NODE_ENV=development
-ENV REACT_APP_API_URL=http://localhost:5000/api
+ENV REACT_APP_API_URL=http://backend:5000/api
 
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3000/ || exit 1
