--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - PORT=5000
       - MONGO_URI=mongodb+srv://dbUser:nas32ksuper18theBestDeveloper@cluster0.5zivful.mongodb.net/apartment-management?retryWrites=true&w=majority&appName=cluster0
     volumes:
