--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,13 +2,10 @@
 nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
-cmd = "cd server && npm ci"
-
-[phases.build]
-cmd = "echo 'No build step required'"
+cmd = "cd server && npm install --production"
 
 [phases.start]
-cmd = "cd server && npm start"
+cmd = "cd server && node server.js"
 
 [variables]
 NODE_ENV = "production"
