--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs-18_x"]
 cmd = "cd server && npm install --production"
 
 [phases.start]
-cmd = "cd server && node server.js"
+cmd = "cd server && node index.js"
 
 [variables]
 NODE_ENV = "production"
